--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         </nav>
       </div>
     </header>
+    <div class = "flex-container">
     <div class="container-main-content">
       <main>
         <h2>About Me</h2>
@@ -25,7 +26,7 @@
         <p>
           <img
             class="profile-pic"
-            src="Assignment 5 Starter Files/assets/profile.jpg"
+            src="Assignment 6 Starter Files/assets/profile.jpg"
             alt="Nhi's Profile Image"
           />
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Error,
@@ -69,19 +70,20 @@
       <aside>
         <h3>Connect with Me</h3>
         <a href="https://github.com/"
-          ><img src="Assignment 5 Starter Files/assets/git.png" alt="Git Icon"
+          ><img src="Assignment 6 Starter Files/assets/git.png" alt="Git Icon"
         /></a>
         <a href="https://www.linkedin.com/"
           ><img
-            src="Assignment 5 Starter Files/assets/linkedin.png"
+            src="Assignment 6 Starter Files/assets/linkedin.png"
             alt="LinkedIn Icon"
         /></a>
         <a href="https://stackoverflow.com/"
           ><img
-            src="Assignment 5 Starter Files/assets/soverflow.png"
+            src="Assignment 6 Starter Files/assets/soverflow.png"
             alt="SoverFlow Icon"
         /></a>
       </aside>
+      </div>
       </div>
     <footer>
       <p>Nhi Eudy, MMC5277</p>
